src/regression/parse_pool/libtest3.sfp.out

sfc in library: parse_pool/libtest3.sfl
syntax error at 2 at line:
use application use $(FENNEC_FOX_LIB)/Application/SimpleBlink
                ^
